--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-<!doctype html><html><head><meta charset='utf-8'><meta name='viewport' content='width=device-width,initial-scale=1'><title>NEXTGEN</title></head><body><div id='root'></div></body></html>
+<div id="main-content" style="display:none;">
+  <div id="welcome-screen">
+  <h2>✨ Welcome to NEXTGEN 😀</h2>
+  </div>
+  <h1>NEXTGEN</h1>
+
+  <div class="voice-wave">
+    <div class="wave-line"></div>
+    <div class="wave-line"></div>
+    <div class="wave-line"></div>
+    <div class="wave-line"></div>
+    <div class="wave-line"></div>
+    <div class="wave-line"></div>
+    <div class="wave-line"></div>
+    <div class="wave-line"></div>
+  </div>
+
+  <div class="chat-box">
+    <div class="messages"></div>
+    <div class="input-area">
+      <input type="text" placeholder="Type a message...">
+      <button>Send</button>
+    </div>
+  </div>
+</div>
