--- a/index.html
+++ b/index.html
@@ -1,25 +1,14 @@
-<div id="main-content" style="display:none;">
-  <div id="welcome-screen">
-  <h2>✨ Welcome to NEXTGEN 😀</h2>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>NextGen</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <div class="welcome">
+    <h1>Welcome to <span class="brand">NEXTGEN 😀</span></h1>
   </div>
-  <h1>NEXTGEN</h1>
-
-  <div class="voice-wave">
-    <div class="wave-line"></div>
-    <div class="wave-line"></div>
-    <div class="wave-line"></div>
-    <div class="wave-line"></div>
-    <div class="wave-line"></div>
-    <div class="wave-line"></div>
-    <div class="wave-line"></div>
-    <div class="wave-line"></div>
-  </div>
-
-  <div class="chat-box">
-    <div class="messages"></div>
-    <div class="input-area">
-      <input type="text" placeholder="Type a message...">
-      <button>Send</button>
-    </div>
-  </div>
-</div>
+</body>
+</html>
